--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>dThe Dude's in Town!</title>
+    <title>The Dude's in Town!</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
